Further CSS and HTML changes Added divs to contain more sections in form Added input:invalid CSS styling More stylistic changes

--- a/index.html
+++ b/index.html
@@ -19,33 +19,40 @@
         </div>
         <div class="subContainer2">
             <div id="header">
-                This is not a real online service! Just a fun project related to Enna!
+                <h2>This is not a real online service! Just a fun project related to Enna!</h2>
             </div>
             <div id="form">
                 <form>
                     <fieldset>
-                        <legend>Became an Aloupeep!</legend>
+                        <legend>Become an Aloupeep!</legend>
                         <div class="formSection">
                             <div class="formPart">
-                                <label for="firstName">First Name</label>
-                                <input type="text" id="firstName" required>
-
-                                <label for="email">Email</label>
-                                <input type="email" id="email" required>
-
-
-                                <label for="password">Password</label>
-                                <input type="password" id="password" minlength="8" required>
+                                <div class="inputLabel">
+                                    <label for="firstName">First Name</label>
+                                    <input type="text" id="firstName" required>
+                                </div>
+                                <div class="inputLabel">
+                                    <label for="email">Email</label>
+                                    <input type="email" id="email" required>
+                                </div>
+                                <div class="inputLabel">
+                                    <label for="password">Password</label>
+                                    <input type="password" id="password" minlength="8" required>
+                                </div>
                             </div>
                             <div class="formPart">
-                                <label for="lastName">Last Name</label>
-                                <input type="text" id="lastName" required>
-
-                                <label for="number">Phone Number</label>
-                                <input type="tel" id="number">
-
-                                <label for="confirmPassword">Confirm Password</label>
-                                <input type="password" id="confirmPassword" minlength="8" required>
+                                <div class="inputLabel">
+                                    <label for="lastName">Last Name</label>
+                                    <input type="text" id="lastName" required>
+                                </div>
+                                <div class="inputLabel">
+                                    <label for="number">Phone Number</label>
+                                    <input type="tel" id="number">
+                                </div>
+                                <div class="inputLabel">
+                                    <label for="confirmPassword">Confirm Password</label>
+                                    <input type="password" id="confirmPassword" minlength="8" required>
+                                </div>
                             </div>
                         </div>
                     </fieldset>
