Added placeholders to inputs to provide guidance Added red asterisks to show required input fields

--- a/index.html
+++ b/index.html
@@ -28,29 +28,29 @@
                         <div class="formSection">
                             <div class="formPart">
                                 <div class="inputLabel">
-                                    <label for="firstName">First Name</label>
-                                    <input type="text" id="firstName" required>
+                                    <label for="firstName">First Name <span class="requiredStar">*</span></label>
+                                    <input type="text" id="firstName" placeholder="Enna" required>
                                 </div>
                                 <div class="inputLabel">
-                                    <label for="email">Email</label>
-                                    <input type="email" id="email" required>
+                                    <label for="email">Email <span class="requiredStar">*</span></label>
+                                    <input type="email" id="email" placeholder="enna@alouette.com" required>
                                 </div>
                                 <div class="inputLabel">
-                                    <label for="password">Password</label>
+                                    <label for="password">Password <span class="requiredStar">*</span></label>
                                     <input type="password" id="password" minlength="8" pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*#?&])[A-Zaa-z\d@$!%*#?&]{8,}$" required>
                                 </div>
                             </div>
                             <div class="formPart">
                                 <div class="inputLabel">
-                                    <label for="lastName">Last Name</label>
-                                    <input type="text" id="lastName" required>
+                                    <label for="lastName">Last Name <span class="requiredStar">*</span></label>
+                                    <input type="text" id="lastName" placeholder="Alouette" required>
                                 </div>
                                 <div class="inputLabel">
                                     <label for="number">Phone Number</label>
                                     <input type="tel" id="number" pattern="\(?\d{3}\)?-? *\d{3}=? *-?\d{4}">
                                 </div>
                                 <div class="inputLabel">
-                                    <label for="confirmPassword">Confirm Password</label>
+                                    <label for="confirmPassword">Confirm Password <span class="requiredStar">*</span></label>
                                     <input type="password" id="confirmPassword" minlength="8" required>
                                 </div>
                             </div>
